# vetr-summarizer

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
src/vetr_summarizer/: __main__.py  config.py  html_generator.py  main.py
src/vetr_summarizer/config/: excluded_keys
src/vetr_summarizer/templates/: base.j2  vetr-data.j2
